# kkkmmu

./: .gitignore  bash_mode.md  cmake_basic.md  cpp_books.md  github_access_slow.md  mvc.md  process.md  telnet.md  tty.md
assembly/: Makefile  asm_basic.md  asmtutor.html  hello_world.asm  inline_asm.md  inline_asm1.md
bashrc/: .bashrc  .dircolors  .exrc  .vimrc
bcmsdk/: CAP.md  basic.md  bcmshell.md  cmic.md  compile_process.md  forward.md  gport.md  iproute.cint  l3_entry.md  lif.md  mmu.md  mpls.md  packet_classification.md  port.md  rxtx.md
c/: asm.c  daemon.c  daemonize.c  gcc.text  gcc_extention.txt  inter_asm.md  timer.c  timer.h
cmake/: CMakeLists.txt  Makefile  Makefile.sample  cmake.md  main.cpp  stuf_that_should_be_in_opencv.cpp  useful_functions.cpp  useful_functions.h  utilies.cpp
cpp/: CMakeLists.txt  Makefile  basic.cpp  class.cpp  cmake_install.cmake  cpp_17.cpp
dot/: thedotlanguage.txt
elf/: Makefile  elf_learn.c  elf_learn.s  elf_learn.txt  functions_and_stack_frame.txt  libc_start_main.txt  linker_and_loader.md  memory_align.txt  stack_setup.txt  x86_calling_conventions.txt
flex_bison/: Makefile  ansic.l  bison.md  bnf.md  c99.l  c99.y  cal.l  calculator.l  calculator.y  calculator_1.c  calculator_1.h  calculator_1.l  calculator_1.y  cancordance.l  ccr.l  compiler.c  compiler.h  compiler.l  compiler.y  file.l  flex.md  flex_bison.md  include.l  mfile.l  text.l  wc.l
gdb/: basic.md  gdb_python.md  gdb_script.md  libstdcpp.py  self-extension.py
golang/: .downloader.go  baidu.go  broadcast.md  build.go  cloure.go  cmd.go  deepcopy2.go  (+23 more)
(+326 files in other folders)
